Drobné opravy písniček

--- a/tp-songs/01_folk/Brontosauři____Nad_Sázavou.tex
+++ b/tp-songs/01_folk/Brontosauři____Nad_Sázavou.tex
@@ -33,7 +33,7 @@ když chodili jsme domů spát.
 \ks
 
 \zr
-Nad <E7>Sáza<Ami>vou, nad <D7>Sáza<G>vou,
+Nad <E7>Sáza<Ami>vou, nad <D7>Sáza<G>vou
 
 občas <Emi>vzpomene si člověk asi <Ami>na ty časy krásný,
 
