--- a/tp-songs/01_folk/Brontosauři____Slunovrat.tex
+++ b/tp-songs/01_folk/Brontosauři____Slunovrat.tex
@@ -3,26 +3,21 @@
 \zp{Slunovrat}{Brontosauři}
 
 \zs
-<Ami>Stíny nad obzo<Ami/C>rem pomalu <H7>jdou,
-<E7>noc se <Ami>snáší,
+<Ami>Stíny nad obzo<Ami/C>rem pomalu <H7>jdou, <E7>noc se <Ami>snáší,
 
-paseky osvítí <Ami/C>zář z borovejch <Ami>klád 
-zapále<Emi>nejch.
+paseky osvítí <Ami/C>zář z borovejch <Ami>klád zapále<Emi>nejch.
 \ks
 
 \zr
-<Ami>Sešli se zapome<C>nout,
-<G>a zvednout hlavu, to <Dmi>stačí.
+<Ami>Sešli se zapome<C>nout <G>a zvednout hlavu, to <Dmi>stačí.
 
-<Ami>Jen trochu popadnout <Emi/H>dech,
-než půjdou zas <Ami>dál.
+<Ami>Jen trochu popadnout <Emi/H>dech, než půjdou zas <Ami>dál.
 \kr
 
 \zs
 Ohnutý lžíce a nůž, dům z igelitu, lístek zpátky,
 
-boudy na zastávkách kde potkávaš lidi,
-co potkat jsi chtěl.
+boudy na zastávkách kde potkávaš lidi, co potkat jsi chtěl.
 \ks
 
 \zr \kr
@@ -30,15 +25,9 @@ co potkat jsi chtěl.
 \zs
 Stíny nad obzorem pomalu jdou, právě svítá,
 
-šlápoty, ohniště, klid,
-smutnej je kemp, opuštěnej.
+šlápoty, ohniště, klid, smutnej je kemp, opuštěnej.
 \ks
 
 \zr \kr
 
 \kp
-
-
-
-
-
