--- a/tp-songs/01_folk/František_Nedvěd____Kočovní_herci.tex
+++ b/tp-songs/01_folk/František_Nedvěd____Kočovní_herci.tex
@@ -6,7 +6,7 @@
 
 budka s <Ami>nápovědou,
 
-<C>to pro ty co zapomněli,
+<C>to pro ty, co zapomněli,
 
 <D>jak svou roli mají <G>správně hrát.<G7> 
 \ks
@@ -14,11 +14,11 @@ budka s <Ami>nápovědou,
 
 <C>Kočovní herci tu <D>jsou, máky kvetou,
 
-<C>principál je<G> pán,
+<C>principál je <G>pán,
 
 <C>kočovní herci tu <D>jsou, s nimi léto
 
-<C>přijelo <G>k nám.
+<C>přijelo k <G>nám.
 \kr
 \zs
 
