--- a/tp-songs/01_folk/Hoboes____Tak_už_mi_má_holka_mává.tex
+++ b/tp-songs/01_folk/Hoboes____Tak_už_mi_má_holka_mává.tex
@@ -9,7 +9,7 @@ máš teplou <D>dlaň, už se <A>stmí<Emi>vá.
 
 Těžký je <D>říct, že se <C>končí <Emi>den,
 
-vlak posl<D>ední vagón <A>mív<C>á.<E>
+vlak posl<D>ední vagón <A>mí<C>vá. <E>
 \ks
 
 \zr
