--- a/tp-songs/01_folk/Hop_Trop____Amazonka.tex
+++ b/tp-songs/01_folk/Hop_Trop____Amazonka.tex
@@ -14,9 +14,9 @@ Tenkrát byly děti malý, ale život utíká,
 už na \uv{táto} slyší jinej, i když si tak neříká.
 \ks
 \zr
-Nebe modrý zrcad<G>lí se <E7>v řece, která všechno <Ami>ví,
+Nebe modrý zrcad<G>lí se <E7> v řece, která všechno <Ami>ví,
 
-stejnou barvou, jakou <G>měly <Ami>tvoje oči džín<D>ový.
+stejnou barvou, jakou <G>měly <Ami>tvoje oči džíno<D>vý.
 \kr
 \zs
 Kluci tenkrát, co tě znali, všude kde jsem s tebou byl,
