--- a/tp-songs/01_folk/Jaroslav_Uhlíř,_Zdeněk_Svěrák____Není_nutno.tex
+++ b/tp-songs/01_folk/Jaroslav_Uhlíř,_Zdeněk_Svěrák____Není_nutno.tex
@@ -17,7 +17,7 @@ nemít žádné kamarády, tomu já říkám neštěstí.
 \zs
 Nemít <F#mi>prachy -- <A>nevadí, nemít <F#mi>srdce -- <A>vadí,
 
-zažít <F#mi>krachy -- <A>nevadí, zažít <F#mi>nudu -- <D>jó to <E>vadí.
+zažít <F#mi>krachy -- <A>nevadí, zažít <F#mi>nudu -- <D>jó, to <E>vadí.
 \ks
 
 
