--- a/tp-songs/01_folk/Karel_Kryl____Divný_kníže.tex
+++ b/tp-songs/01_folk/Karel_Kryl____Divný_kníže.tex
@@ -3,7 +3,7 @@
 \zp{Divný kníže}{Karel Kryl}
 
 \zs
-<Ami>Jel krajem divný <C>kníže, <Ami> a <G>chrpy povad<Ami>ly,
+<Ami>Jel krajem divný <C>kníže <Ami> a <G>chrpy povad<Ami>ly,
 
 když z prstů koval <C>mříže <Ami>a z paží zábrad<E>lí,
 
