--- a/tp-songs/01_folk/Jaroslav_Ježek____Babička_Mary.tex
+++ b/tp-songs/01_folk/Jaroslav_Ježek____Babička_Mary.tex
@@ -15,11 +15,9 @@
 
 \bigskip
 
-<G7>Když tu náhle -- co se <C>děje? <G7>Divný šelest houštím 
-<C>spěje, 
+<G7>Když tu náhle -- co se <C>děje? <G7>Divný šelest houštím <C>spěje, 
 
-<G7>plch, skunk? -- <C>Vše utíká <F>po stráni <F#dim>od 
-Mední<E>ka. 
+<G7>plch, skunk? -- <C>Vše utíká <F>po stráni <F#dim>od Mední<E>ka. 
 
 \bigskip
 
