--- a/tp-songs/01_folk/Jaroslav_Ježek____Ezob_a_brabenec.tex
+++ b/tp-songs/01_folk/Jaroslav_Ježek____Ezob_a_brabenec.tex
@@ -19,7 +19,7 @@
 
 chech<D7>tám, když pupe<G#7>nec <G7>kyselinou <C>leptám. <D7> <Dmi7> <G7> 
 
-<C>Vím}, totiž ten <G7>brabenec, \uv{mraveneč<C>ník <B>že 
+<C>Vím,} totiž ten <G7>brabenec, \uv{mraveneč<C>ník <B>že 
 se mě <A7>neptá,
 
 <D7>neptá, pozře mě, ať se <G#7>chechtám -- 
