Automatické přidávání rozdělovníků
TeX je nyní trochu chytřejší a poradí si sám, když je akord delší, než slova
pod ním. Místo dřívějšího
    <C>do-<Cdim>bro-<Gmi7>druž-<C#7>ství
stačí napsat
    <C>do<Cdim>bro<Gmi7>druž<C#7>ství
a rozdělovníky se automaticky přidají tam, kde
1) akord dělí slovo,
2) je delší než odpovídající část slova pod ním
3) a toto vytvoří mezeru delší než jeden rozdělovník.

To má tři výhody:
1) nemusí se na tu možnost při psaní myslet,
2) chování se přizpůsobí prodloužení/zkrácení akordové značky při transpozici,
3) vypadá to pěkněji.

--- a/tp-songs/01_folk/Bratři_Ebenové____Folklóreček.tex
+++ b/tp-songs/01_folk/Bratři_Ebenové____Folklóreček.tex
@@ -17,7 +17,7 @@ takhle tu pisničku máme hned hotovú.
 \zr
 <A>Nejvíc mě ten folkloreček {do}{jí}<C>má,
 
-<G>když se hraje <Emi>elektricky, <G>elektricky s <Emi>bi-<A>cí-<D>ma.
+<G>když se hraje <Emi>elektricky, <G>elektricky s <Emi>bi<A>cí<D>ma.
 \kr
 
 \zs
