--- a/tp-songs/01_folk/Ivan_Mládek____Jožin_z_bažin.tex
+++ b/tp-songs/01_folk/Ivan_Mládek____Jožin_z_bažin.tex
@@ -8,7 +8,7 @@ spěchám, proto riskuji, <E>projíždím přes <Ami>Moravu.
 
 <G7>Řádí tam to <C>strašidlo, <G7>vystupuje z <C>ba<E>žin,
 
-<Ami>žere hlavně Pražáky, <E>jmenuje se <Ami>Jo-<G7>žin.
+<Ami>žere hlavně Pražáky, <E>jmenuje se <Ami>Jo<G7>žin.
 \ks
 \zr
 <C>Jožin z bažin močálem se <G7>plíží,
