--- a/tp-songs/01_folk/Jarek_Nohavica____Divoké_koně.tex
+++ b/tp-songs/01_folk/Jarek_Nohavica____Divoké_koně.tex
@@ -10,7 +10,7 @@
 <Dmi>soumra<Ami>kem, 
 
 <Dmi>vzduch <Ami>těžký <Dmi>byl a divně <Ami>voněl 
-<G#dim>tabá-<F>kem. 
+<G#dim>tabá<F>kem. 
 
 <Dmi>vzduch <Ami>těžký <Dmi>byl a divně <Ami>voněl 
 <E7>tabá<Ami>kem. \ks
