--- a/tp-songs/01_folk/Jaroslav_Ježek____Ezob_a_brabenec.tex
+++ b/tp-songs/01_folk/Jaroslav_Ježek____Ezob_a_brabenec.tex
@@ -11,7 +11,7 @@
 <Dmi>Brabenec se <E>chechtá, <Dmi>Ezop se <D7>hned 
 <G7>ptá,
 
-<C>čemu <Emi>že se <Ami>na trávě v <Ami7>lese <F>prá<G>vě <Dmi>řeh-<G7>tá.
+<C>čemu <Emi>že se <Ami>na trávě v <Ami7>lese <F>prá<G>vě <Dmi>řeh<G7>tá.
 \ks
 
 \zs
