--- a/tp-songs/01_folk/Jaroslav_Ježek____Nebe_na_zemi.tex
+++ b/tp-songs/01_folk/Jaroslav_Ježek____Nebe_na_zemi.tex
@@ -18,7 +18,7 @@
 pravdu <A7>mám, věřte mi, 
 
 za <D7>život <D9/G>život <D7>dám, i <D9/G>když 
-<D7>nerad <D9/G>umí-<D7>rám, 
+<D7>nerad <D9/G>umí<D7>rám, 
 
 <D+>nejsem <G>sám, <D+>věřte <G>mi. \ks
 
