--- a/tp-songs/01_folk/Karel_Plíhal____Kluziště.tex
+++ b/tp-songs/01_folk/Karel_Plíhal____Kluziště.tex
@@ -4,7 +4,7 @@
 
 \zs
 <C>Strejček <Emi7/H>kovář <Ami7>chytil <C/G>kleště, 
-<Fmaj7>uštíp' z <C>noční <Fmaj7>oblo-<G>hy
+<Fmaj7>uštíp' z <C>noční <Fmaj7>oblo<G>hy
 
 <C>jednu <Emi7/H>malou <Ami7>kapku <C/G>deště, 
 <Fmaj7>ta mu <C>spadla <Fmaj7>pod no<G>hy,
@@ -13,7 +13,7 @@
 <Fmaj7>tak šáh' <C>kamsi <Fmaj7>pro pi<G>vo,
 
 <C>pak při<Emi7/H>táhl <Ami7>kovad<C/G>linu <Fmaj7>a 
-ob-<C>rovský <Fmaj7>kladi- <G>vo.
+ob<C>rovský <Fmaj7>kladi<G>vo.
 \ks
 
 \zr
