--- a/tp-songs/01_folk/Karel_Plíhal____Trubadúrská.tex
+++ b/tp-songs/01_folk/Karel_Plíhal____Trubadúrská.tex
@@ -6,7 +6,7 @@
 <Ami>Od hradu <Emi>ke hradu <Ami>putujem,
 <C>zpíváme <G>a holky <E7>muchlujem.
 
-/: <Ami>Dřív ji<Ami/G>nam <Fmaj7>neje-<Fmaj7/F#>dem,
+/: <Ami>Dřív ji<Ami/G>nam <Fmaj7>neje<Fmaj7/F#>dem,
 <Ami>dokud tu <Emi>poslední <Ami>nesvedem. :/
 \ks
 
@@ -23,10 +23,10 @@ ctihodných měšťanů z radnice. :/
 pan <Fmaj7>kníže <D9/F#>pozval <G>kejklíře,
 
 <G>hop hej, je <C>vese<Emi7/H>lo,
-dnes <Fmaj7>víta-<Emi>ní jsme <Ami>hosti.
+dnes <Fmaj7>víta<Emi>ní jsme <Ami>hosti.
 
 <G>Hop hej, je <C>vese<Emi7/H>lo,
-ač <Fmaj7>neda-<D9/F#>li nám <G>talíře,
+ač <Fmaj7>neda<D9/F#>li nám <G>talíře,
 
 <G>hop hej, je <C>vese<Emi7/H>lo,
 pod <Fmaj7>stůl nám <Emi>hážou <Ami>kosti.
