--- a/tp-songs/01_folk/Nerez____Tisíc_dnů_mezi_námi.tex
+++ b/tp-songs/01_folk/Nerez____Tisíc_dnů_mezi_námi.tex
@@ -12,7 +12,7 @@ den za dnem si na nit navlékáš korálky s vůní našich dlaní.
 \zr
 Světlo a <F#mi>tma, tak <C#mi7>to <Cmi>jsem <Hmi>já,
 
-zhasni a <F#mi>dělej, co se dělat <C#mi>mů-<Hmi>že.
+zhasni a <F#mi>dělej, co se dělat <C#mi>mů<Hmi>že.
 
 Světlo a tma, tak to jsem já,
 
@@ -30,7 +30,7 @@ pátý týden ve vzduchu plavou.
 \zr \kr
 
 \zs
-<Hmi>Ti-<G>síc dnů <F#mi>mezi <Hmi>námi
+<Hmi>Ti<G>síc dnů <F#mi>mezi <Hmi>námi
 jako nekonečno nevypadá,
 
 našel jsem tě kdysi ve stohu slámy,
