--- a/tp-songs/01_folk/Nezmaři____Pisek.tex
+++ b/tp-songs/01_folk/Nezmaři____Pisek.tex
@@ -3,20 +3,20 @@
 \zp{Písek}{Nezmaři}
 
 \zs
-Jako <Ami>pí-<D>sek <G>přesíváš mě <E7>mezi prsty,
-<Dmi>stejně ti <E7>dlaně prázdný <Ami>zůs-<G>ta<C>nou, 
+Jako <Ami>pí<D>sek <G>přesíváš mě <E7>mezi prsty,
+<Dmi>stejně ti <E7>dlaně prázdný <Ami>zůs<G>ta<C>nou, 
 
 ani <Dmi>vodu nepřeliješ <G>sítem,
 někdy je <C>strašně <Emi>málo <Ami>chtít,
 
 <Dmi>já nejsem z těch, co po <E7>těžký ráně
-<Ami>ne-<G>vsta<C>nou.
+<Ami>ne<G>vsta<C>nou.
 
 Ani <Dmi>vodu nepřeliješ <G>sítem,
 někdy je <C>strašně <Emi>málo <Ami>chtít, 
 
 <Dmi>já nejsem z těch, co po <E7>těžký ráně
-<Ami>ne-<E7>vsta<Ami>nou. \ks
+<Ami>ne<E7>vsta<Ami>nou. \ks
 
 \zs
 Pevnou vůlí taky příliš neoplýváš, zdá se, že nemíníš mě vážně brát. 
