--- a/tp-songs/01_folk/Spirituál_kvintet____Batalion.tex
+++ b/tp-songs/01_folk/Spirituál_kvintet____Batalion.tex
@@ -4,17 +4,17 @@
 
 <Ami>Víno <C>máš a <G>markyt<Ami>ánku,
 
-dlouhá <C>noc <G>se <Ami>pro<Emi>hý-<Ami>ří.
+dlouhá <C>noc <G>se <Ami>pro<Emi>hý<Ami>ří.
 
 <Ami>Víno <C>máš a <G>chvilku <Ami>spánku,
 
-<C>díky, dí<G>ky, <Ami>ver-<Emi>bí-<Ami>ři.
+<C>díky, dí<G>ky, <Ami>ver<Emi>bí<Ami>ři.
 
 \zs
 <Ami>Dříve než se rozední,
-kapitán k <C>osedlání <G>rozkaz <Ami>dá-<Emi>vá,
+kapitán k <C>osedlání <G>rozkaz <Ami>dá<Emi>vá,
 
-<Ami>ostruhami do slabin <G>koně <Ami>po-<Emi>há-<Ami>ní.
+<Ami>ostruhami do slabin <G>koně <Ami>po<Emi>há<Ami>ní.
 
 Tam na straně polední
 čekají ženy, zlaťáky a sláva,
@@ -26,12 +26,12 @@ do výstřelů z karabin zvon už vyzvání.
 <Ami>Víno na <C>kuráž a <G>pomilovat marky<Ami>tánku,
 
 <Ami>zítra do <C>Burgund bata<G>lion 
-<Ami>za-<Emi>mí-<Ami>ří.
+<Ami>za<Emi>mí<Ami>ří.
 
 <Ami>Víno na <C>kuráž a k <G>ránu dvě hodiny <Ami>spánku.
 
 <Ami>Díky, díky <C>vám, králo<G>vští 
-<Ami>ver-<Emi>bí-<Ami>ři.
+<Ami>ver<Emi>bí<Ami>ři.
 \kr
 
 \zs
