--- a/tp-songs/01_folk/Spirituál_kvintet____Žízeň.tex
+++ b/tp-songs/01_folk/Spirituál_kvintet____Žízeň.tex
@@ -7,7 +7,7 @@ Když ka<C>pky deště buší na <Fmaj7>rozpále<Ami>nou <G>ze<C>m,
 
 já toužím celou duší dát <Fmaj7>živou vodu <C>všem,
 
-už v Knize knih je psáno: bez <Fmaj7>vody <Ami>nel-<G>ze <C>žít,
+už v Knize knih je psáno: bez <Fmaj7>vody <Ami>nel<G>ze <C>žít,
 
 však ne každému je dáno <Fmaj7>z řeky pravdy <C>pít.
 \ks
