--- a/tp-songs/01_folk/Wabi_Daněk____Rosa_na_kolejích.tex
+++ b/tp-songs/01_folk/Wabi_Daněk____Rosa_na_kolejích.tex
@@ -31,7 +31,7 @@ to nekonečně <F6>dlou<F#6>hý <G6>mono<F#6>tón<F6>ní <C>blues.
 
 Je ráno, je ráno.
 
-/: Nohama <F6>stí<F#6>ráš <G6>rosu na <F#6>ko-<F6>le-<C>jích. :/
+/: Nohama <F6>stí<F#6>ráš <G6>rosu na <F#6>ko<F6>le<C>jích. :/
 \kr
 
 \zs
