--- a/tp-songs/01_folk/Waldemar_Matuška____Jó_třešně_zrály.tex
+++ b/tp-songs/01_folk/Waldemar_Matuška____Jó_třešně_zrály.tex
@@ -9,7 +9,7 @@ sladký <E7>třešně <Ami>zrály a <F>vlahej <G7>vítr <C>vál, <G>
 
 <C>a já k <G7>horám v <Ami>dáli, k těm <Dmi7>modrejm <G7>horám v <C>dáli,
 
-sluncem, <E7>který <Ami>pá-<F>lí, tou <Dmi7>dobou <G7>stádo <C>hnal.
+sluncem, <E7>který <Ami>pá<F>lí, tou <Dmi7>dobou <G7>stádo <C>hnal.
 \ks
 
 \zr
