--- a/tp-songs/02_pop_rock/Blue_Effect____Sluneční_hrob.tex
+++ b/tp-songs/02_pop_rock/Blue_Effect____Sluneční_hrob.tex
@@ -29,9 +29,9 @@ kterej si <G#mi>rád hraje a kterej je <F#mi>s tebou. <E>
 \ks
 
 \zr
-<C#mi>Su-<D#mi>chá <A>hlína <G#mi>ta-<F#mi>dy
+<C#mi>Su<D#mi>chá <A>hlína <G#mi>ta<F#mi>dy
 
-<C#mi>nevz<D#mi>klí-<Ami>čí bez <G#mi>vo-<F#mi>dy,
+<C#mi>nevz<D#mi>klí<Ami>čí bez <G#mi>vo<F#mi>dy,
 
 <G#mi>já na ni <F#mi>poklekám, <G#mi>vzpomínkou poc<H>ta se vzdává.
 \kr
