--- a/tp-songs/02_pop_rock/Buty____Chtěl_bych_se_jmenovat_Jan.tex
+++ b/tp-songs/02_pop_rock/Buty____Chtěl_bych_se_jmenovat_Jan.tex
@@ -13,9 +13,9 @@ Přicházet k nim nepoz<Dmi>ván
 \ks
 
 \zr
-Celé <Ami>mlá-<Emi>dí, <F> <E> <F> <F#> <G>
+Celé <Ami>mlá<Emi>dí, <F> <E> <F> <F#> <G>
 
-Celé <Ami>stá-<Emi>ří, <F> <E> <F> <F#> <G>
+Celé <Ami>stá<Emi>ří, <F> <E> <F> <F#> <G>
 
 chtěl bych se jmenovat <C>Jan.
 \kr
