--- a/tp-songs/02_pop_rock/Hana_Hegerová,_Waldemar_Matuška____Tak_abyste_to_věděla.tex
+++ b/tp-songs/02_pop_rock/Hana_Hegerová,_Waldemar_Matuška____Tak_abyste_to_věděla.tex
@@ -1,10 +1,7 @@
 % -*-coding: utf-8 -*-
 
 \zp{Tak abyste to věděla}{Hana Hegerová, Waldemar Matuška}
-<Gmi>~~ <Gmi>~~
-<D7>~~ <D7>~~
-<Gmi>~~ <Gmi>~~
-<D7>~~ <D7>~~
+<Gmi> <Gmi> <D7> <D7> <Gmi> <Gmi> <D7> <D7>
 
 \zs
 <Gmi>Marně si hlavu <Cmi>lámu,
@@ -30,10 +27,10 @@ a já vás varu<G>ju!
 Tak <G7>abyste to <C>věděla,
 tak <Eb7>já vám vyznám <G>lásku,
 
-Tak a-<F#7>by-<F7>ste <E7>to <A7>věděla,
+Tak a<F#7>by<F7>ste <E7>to <A7>věděla,
 tak <D7>já vás <Gmi>miluju!
 
-<D7>~~ <D7>~~ <Gmi>~~ <Gmi>~~ <D7>~~ <D7>~~
+<D7> <D7> <Gmi> <Gmi> <D7> <D7>
 \kr
 
 \zs
