--- a/tp-songs/02_pop_rock/Václav_Neckář____Stín_katedrál.tex
+++ b/tp-songs/02_pop_rock/Václav_Neckář____Stín_katedrál.tex
@@ -7,7 +7,7 @@
 
 <D>Svůj <G>ideál, <D>sen, co si <E>dávám <A>zdát.
 
-Z <D>ú-<G>směvů šál, <D>dům, nebo básní <C>rým, <G>jé - <A>jé - <D>jé,
+Z <D>ú<G>směvů šál, <D>dům, nebo básní <C>rým, <G>jé - <A>jé - <D>jé,
 
 <G>co Ti dál <D>mám, řekni, <E>dárkem <A>dát.
 \ks
