--- a/tp-songs/03_zahranicni/Alexandrovci____Kaťuša.tex
+++ b/tp-songs/03_zahranicni/Alexandrovci____Kaťuša.tex
@@ -8,13 +8,13 @@
 %<Dmi>Расцветали яблони и <A7>груши, поплыли туманы над 
 %<Dmi>рекой,
 
-%/: <Dmi>Вы-<B>хо-<F>дила <Gmi>на берег Ка<Dmi>тюша,
+%/: <Dmi>Вы<B>хо<F>дила <Gmi>на берег Ка<Dmi>тюша,
 %<Gmi>на вы<Dmi>сокий <A7>берег на кру<Dmi>той. :/
 
 <Dmi>Razcvětaly jabloni i <A7>gruši, poplyli tumany nad 
 re<Dmi>koj,
 
-/: <Dmi>vy-<B>cha<F>dila <Gmi>na běreg Ka<Dmi>ťuša, 
+/: <Dmi>vy<B>cha<F>dila <Gmi>na běreg Ka<Dmi>ťuša, 
 <Gmi>na vy<Dmi>sokij <A7>běreg, na kru<Dmi>toj. :/
 \ks
 
