--- a/tp-songs/03_zahranicni/Norah_Jones____Dont_Know_Why.tex
+++ b/tp-songs/03_zahranicni/Norah_Jones____Dont_Know_Why.tex
@@ -29,7 +29,7 @@ My <Gmi7>heart is <C7>drenched in <F>wine <F7>
 
 But <Gmi7>you'll be <C7>on my <F7>mind
  
-<F7/Eb>For-<Bb/D>ev-<F/C>er
+<F7/Eb>For<Bb/D>ev<F/C>er
 \kr
 
 \zs
