--- a/tp-songs/03_zahranicni/Pink_Floyd____Shine_on_your_crazy_diamond.tex
+++ b/tp-songs/03_zahranicni/Pink_Floyd____Shine_on_your_crazy_diamond.tex
@@ -6,12 +6,12 @@
 <Gmi>Remember when you were young,
 <F#>you shone like the <B>sun
 
-<Es>Shine <Es/D>on you <Cmi>cra-<Cmi/Bb>zy <F>diamond
+<Es>Shine <Es/D>on you <Cmi>cra<Cmi/Bb>zy <F>diamond
 
 <Gmi>Now there's a look in your eyes
 <F#>like black holes in the <B>sky
 
-<Es>Shine <Es/D>on you <Cmi>cra-<Cmi/Bb>zy <F>diamond
+<Es>Shine <Es/D>on you <Cmi>cra<Cmi/Bb>zy <F>diamond
 
 You were <Gmi>caught in the crossfire
 <Gmmaj7/F#>of childhood and stardom
