--- a/tp-songs/03_zahranicni/Rolling_Stones____Angie.tex
+++ b/tp-songs/03_zahranicni/Rolling_Stones____Angie.tex
@@ -39,7 +39,7 @@ All your <Dmi>kisses still taste <Ami>sweet
 
 <C>I hate that <F>sadness in your <G>eyes
 
-but <Ami>Angie, <E7>Angie, <C2>ain't it <B2>ti-<F>me we said good<C>bye... ya
+but <Ami>Angie, <E7>Angie, <C2>ain't it <B2>ti<F>me we said good<C>bye... ya
 \kr
 
 Solo.
