--- a/tp-songs/01_folk/Jaroslav_Ježek____Svítá.tex
+++ b/tp-songs/01_folk/Jaroslav_Ježek____Svítá.tex
@@ -3,20 +3,20 @@
 \zp{Svítá}{Jaroslav Ježek}
 
 \zs
-<F>Do srdce se ti <E7>dí-<C#mi>vám, <F>když pod oknem ti <B+>zpí<D7>vám 
+<F>Do srdce se ti <E7>dí<C#mi>vám, <F>když pod oknem ti <B+>zpí<D7>vám 
 
-<G9>každou noc stejná <F>slo<D7>va, <Gmi7>zno-<C+>va <F>svou sere<E7>ná<C+>du. 
+<G9>každou noc stejná <F>slo<D7>va, <Gmi7>zno<C+>va <F>svou sere<E7>ná<C+>du. 
 
-<F>Svou serenádu <E7>zpí<C#mi7>vám, <F>marně se k oknu <D+>dí-<D7>vám, 
+<F>Svou serenádu <E7>zpí<C#mi7>vám, <F>marně se k oknu <D+>dí<D7>vám, 
 
-<G7>než zazpívám ji <F>jed-<Dmi>nou, <G7>hvěz<G7+>dy <Gmi7>zbled-<Gdim>nou. 
+<G7>než zazpívám ji <F>jed<Dmi>nou, <G7>hvěz<G7+>dy <Gmi7>zbled<Gdim>nou. 
 \ks
 \zr
 <F>Sví<Dmi>tá, <Gmi> <Bmi6>probuď se, už <F>sví<Dmi>tá, <G7> 
 
 zažeň chladný <C#7>sen, bude horký <C7>den, je čas procit<F>nout. 
 
-<Cdim>Nad <Gmi7>le-<C#7>sy <F>sví<Dmi>tá, <Gmi>
+<Cdim>Nad <Gmi7>le<C#7>sy <F>sví<Dmi>tá, <Gmi>
 <Bmi6>hvězdy blednou, <F>sví<Dmi>tá, <G7> 
 
 Otevř' na můj <C#7>hlas, nastává už <C7>čas, 
@@ -27,7 +27,7 @@ chceš-li uprch<F>nout <B7>se <F>mnou.
 \zs
 <As>Chvíli, ještě malou <Es>chvíli a bude den <Fmi>bílý, 
 
-<Fdim>bude <G7>konec <C>do-<Cdim>bro-<Gmi7>druž-<C#7>ství. 
+<Fdim>bude <G7>konec <C>do<Cdim>bro<Gmi7>druž<C#7>ství. 
 
 <F>Sví<Dmi>tá, <Gmi> <Bmi6>na východě <F>sví<Dmi>tá, <G7>každý příští <C#7>den 
 
