Odstranění nepotřebných závorek

--- a/tp-songs/01_folk/Bratři_Ebenové____Folklóreček.tex
+++ b/tp-songs/01_folk/Bratři_Ebenové____Folklóreček.tex
@@ -15,7 +15,7 @@ takhle tu pisničku máme hned hotovú.
 \ks
 
 \zr
-<A>Nejvíc mě ten folkloreček {do}{jí}<C>má,
+<A>Nejvíc mě ten folkloreček dojí<C>má,
 
 <G>když se hraje <Emi>elektricky, <G>elektricky s <Emi>bi<A>cí<D>ma.
 \kr
