--- a/tp-songs/01_folk/Brontosauři____Valčíček.tex
+++ b/tp-songs/01_folk/Brontosauři____Valčíček.tex
@@ -7,19 +7,19 @@ Tuhle <C>písničku chtěl bych ti, <G>lásko, dát,
 
 ať ti <G7>každej den připomí<C>ná,
 
-/: toho, {kdo} je tvůj, <C7>čí ty jsi <F>a kdo má <C>rád,
+/: toho, kdo je tvůj, <C7>čí ty jsi <F>a kdo má <C>rád,
 
 ať ti každej den <G>připomí<C>ná :/
 \kr
 
 \zs
-{Kluka} jako ty hledám už {spoustu} let,
+Kluka jako ty hledám už spoustu let,
 
-tako{vý} trošku trhlý mý {já},
+takový trošku trhlý mý já,
 
-dej mi {ruku}, pojď, půjdeme {šlapat} náš {svět},
+dej mi ruku, pojď, půjdeme šlapat náš svět,
 
-{i} když obrovskou {práci} to {dá}.
+i když obrovskou práci to dá.
 \ks
 
 \zr
