--- a/tp-songs/01_folk/Hop_Trop____Amazonka.tex
+++ b/tp-songs/01_folk/Hop_Trop____Amazonka.tex
@@ -3,7 +3,7 @@
 \zp{Amazonka}{Hop Trop}
 \zs
 Byly krásný naše <G>plány,
-{byla} jsi můj celej <Hmi>svět, <A#mi> <Ami>
+byla jsi můj celej <Hmi>svět, <A#mi> <Ami>
 
 čas je vzal a nechal <G>rány,
 <Ami>starší jsme jen o pár <D>let.
