--- a/tp-songs/01_folk/Marsyas____Marsyas_a_Apollón.tex
+++ b/tp-songs/01_folk/Marsyas____Marsyas_a_Apollón.tex
@@ -9,7 +9,7 @@
 
 <D>odhodí flétnu, <Emi>hrát nejde s <A>nehybnou <Asus4>tváří,
 
-<D>ten, kdo ji <Emi7>najde dřív, {tomu} se <D>přání zmaří.
+<D>ten, kdo ji <Emi7>najde dřív, tomu se <D>přání zmaří.
 \ks
 
 \zr
