--- a/tp-songs/01_folk/Wabi_Daněk____Rosa_na_kolejích.tex
+++ b/tp-songs/01_folk/Wabi_Daněk____Rosa_na_kolejích.tex
@@ -13,7 +13,7 @@ tak se vracím <F6>k svýmu ná<F#6>dra<G6>ží,
 
 abych šel zas <C>dál.
 
-{Přede} mnou <F6>stíny se <G6>plouží
+Přede mnou <F6>stíny se <G6>plouží
 
 a <Ami>nad krajinou <F#dim>krouží
 
