--- a/tp-songs/02_pop_rock/Buty____Krtek.tex
+++ b/tp-songs/02_pop_rock/Buty____Krtek.tex
@@ -9,7 +9,7 @@ V zemi se narodil <Ami>krtek,
 <Dmi>do pusy vlezla mu <B>hlína,
 <G>a on ji vykuc<F>kal, <E>jé,
 
-chtěl se na {ni} po<Ami>dívat,
+chtěl se na ni po<Ami>dívat,
 <D>ale byla tam <Ami>tma.
 
 \uv{<Dmi>Ty nikdy nebudeš <B>vidět,}
