--- a/tp-songs/02_pop_rock/Chinaski____Tabáček.tex
+++ b/tp-songs/02_pop_rock/Chinaski____Tabáček.tex
@@ -13,7 +13,7 @@
 <Emi>Polevím z vysokejch <A>otáček,
 <Dmaj7>pohoda, klídek a <Hmi>tabáček,
 
-<Emi>půl dne {noviny} číst a pak <A>cigáro,
+<Emi>půl dne noviny číst a pak <A>cigáro,
 <Dmaj7>pohoda, klídek, <Hmi>leháro,
 
 <Emi>nejspíš jsem jenom <A>línej čím dál <D>víc.
