--- a/tp-songs/02_pop_rock/Hana_Zagorová____Maluj_zase_obrázky.tex
+++ b/tp-songs/02_pop_rock/Hana_Zagorová____Maluj_zase_obrázky.tex
@@ -7,7 +7,7 @@
 
 <Dmi>vyzdobené <G>sluníčky <C>přímo od malíře,
 
-<Ami>cukru na pět <E>hromádek, <Ami>čtyři {knížky} <F>pohádek,
+<Ami>cukru na pět <E>hromádek, <Ami>čtyři knížky <F>pohádek,
 
 <C>dva prstýnky <Dmi>na splátky, <Cdim>prázdné přihrád<E>ky.
 
