--- a/tp-songs/02_pop_rock/Ivan_Hlas____Na_kolena.tex
+++ b/tp-songs/02_pop_rock/Ivan_Hlas____Na_kolena.tex
@@ -13,13 +13,13 @@ Ztratil jsem <C>holku, co jí mám <D>rád!
 \ks
 
 \zs
-Napravo, {nalevo} nebudu mít {klid,}
+Napravo, nalevo nebudu mít klid,
 
-dala mi {najevo}, že mě nechce {mít.}
+dala mi najevo, že mě nechce mít.
 
-Zpitej a {špinavej} tancuju {sám,}
+Zpitej a špinavej tancuju sám,
 
-váš pohled {káravej} už dávno {znám.}
+váš pohled káravej už dávno znám.
 \ks
 
 \zr
