--- a/tp-songs/02_pop_rock/Michal_Prokop____Bitva_o_Karlův_most.tex
+++ b/tp-songs/02_pop_rock/Michal_Prokop____Bitva_o_Karlův_most.tex
@@ -5,15 +5,15 @@
 \zs
 <C>Má vlasy <G>dlouhý do půl <C>pasu,
 
-{k tur}istům <F>jistou <C>náklonnost,
+k turistům <F>jistou <C>náklonnost,
 
-{barokní} <G>sochy v letním <C>jasu
+barokní <G>sochy v letním <C>jasu
 
-{sedí} tu <F>jako hejno <C>vos.
+sedí tu <F>jako hejno <C>vos.
 
 /: <Ami>Má vlasy <Emi>do pasu a <F>jen tak pro <C>radost
 
-{nabízí} <G>ortel nebo <C(F)>spásu :/ v bitvě o Karlův <C>most.
+nabízí <G>ortel nebo <C(F)>spásu :/ v bitvě o Karlův <C>most.
 \ks
 
 \zr
