--- a/tp-songs/02_pop_rock/Olympic____Otázky.tex
+++ b/tp-songs/02_pop_rock/Olympic____Otázky.tex
@@ -6,7 +6,7 @@
 <C> <F> <G> <C> <C> <F> <G> <C>
 
 \zs
-<C>Kolik mám ještě {dní}, <F>než přijde poslední,
+<C>Kolik mám ještě dní, <F>než přijde poslední,
 
 <G>jak dlouho budu zpívat a <C>hrát?
 
