--- a/tp-songs/02_pop_rock/Václav_Neckář____Tu_kytaru_jsem_koupil_kvůli_tobě.tex
+++ b/tp-songs/02_pop_rock/Václav_Neckář____Tu_kytaru_jsem_koupil_kvůli_tobě.tex
@@ -35,7 +35,7 @@ měj <A>soucit aspoň k tomu javo<H>ru,<H7>
 
 jen <E>kvůli tobě <E7>přestal býti <A>stromem, <Ami> 
 
-{tak} už nás <E>oba <H7>pozvi naho<E>ru,
+tak už nás <E>oba <H7>pozvi naho<E>ru,
 <H7>pozvi naho<E>ru, <D>pozvi <D#>naho<E>ru.
 \ks
 \kp
