--- a/tp-songs/03_zahranicni/Creedence_Clearwater_Revival____Proud_Mary.tex
+++ b/tp-songs/03_zahranicni/Creedence_Clearwater_Revival____Proud_Mary.tex
@@ -33,7 +33,7 @@ Worryin' 'bout the way things might have been
 \kr
 
 \zs
-{Cleaned} a lot of plates in Memphis
+Cleaned a lot of plates in Memphis
 
 Pumped a lot of pain down in New Orleans
 
