--- a/tp-songs/03_zahranicni/Mamas__Papas____California_dreaming.tex
+++ b/tp-songs/03_zahranicni/Mamas__Papas____California_dreaming.tex
@@ -2,7 +2,7 @@
 
 \zp{California dreaming}{Mamas \& Papas}
 \zs
-All {the} leaves are <Ami>brown (all the <G>leaves are <F>brown)
+All the leaves are <Ami>brown (all the <G>leaves are <F>brown)
 
 And the <G>sky is <E>gray (and the sky is <E7>gray)
 
@@ -10,14 +10,14 @@ I've <F>been for a <C>walk (I've been <E7>for a <Ami>walk)
 
 On a <F>winter's <E>day (on a winter's <E7>day)
 
-I'd {be} safe and <Ami>warm (I'd be <G>safe and <F>warm)
+I'd be safe and <Ami>warm (I'd be <G>safe and <F>warm)
 
 If I <G>was in <E>L.A. (if I was in L.<E7>A.)
 
 \ks
 
 \zr
-Cali{fornia} <Ami>dreamin' (Cali<G>fornia <F>dreamin')
+California <Ami>dreamin' (Cali<G>fornia <F>dreamin')
 
 On <G>such a winter's <E>day <E7>
 \kr
