--- a/tp-songs/03_zahranicni/Rolling_Stones____Angie.tex
+++ b/tp-songs/03_zahranicni/Rolling_Stones____Angie.tex
@@ -45,10 +45,10 @@ but <Ami>Angie, <E7>Angie, <C2>ain't it <B2>ti<F>me we said good<C>bye... ya
 Solo.
 
 \zr
-With no {loving} in our souls
-and no {money} in our {coats}
+With no loving in our souls
+and no money in our coats
 
-{Oh} you can't {say} we're satisfied
+Oh you can't say we're satisfied
 \kr
 
 \zs
@@ -58,11 +58,11 @@ Every where I look I see your eyes
 \ks
 
 \zs
-{There} ain't a woman that comes {close} to you
+There ain't a woman that comes close to you
 
-{Come} on {baby} dry your {eyes}
+Come on baby dry your eyes
 
-Angie, {Angie,} {ain't} it {good} to be alive
+Angie, Angie, ain't it good to be alive
 
 Angie, Angie, they can't say we never tried
 \ks
