--- a/tp-songs/01_folk/Jarek_Nohavica____Zítra_ráno_v_pět.tex
+++ b/tp-songs/01_folk/Jarek_Nohavica____Zítra_ráno_v_pět.tex
@@ -9,7 +9,7 @@ Až mě <Emi>zítra ráno v pět
 ješ<C>tě si napos<D>led
 dám <G>vodku na zdra<E7>ví,
 
-z očí <Ami>pásku {strhnu} <D7>si, to
+z očí <Ami>pásku strhnu <D7>si, to
 abych <G>viděl na ne<Emi>be
 
 a <Ami>pak vzpomenu <H7>si,
