--- a/tp-songs/02_pop_rock/Ivan_Hlas____Aranka_umí_hula_hop.tex
+++ b/tp-songs/02_pop_rock/Ivan_Hlas____Aranka_umí_hula_hop.tex
@@ -3,7 +3,7 @@
 \zp{Aranka umí hula hop}{Ivan Hlas}
 
 \zs
-<Hmi>Barevnej šátek {do} vla<G>sů a <F#>jedem,
+<Hmi>Barevnej šátek do vla<G>sů a <F#>jedem,
 
 <Hmi>na křídlech černejch pega<G>sů se <F#>svedem,
 
