Drobné opravy písniček

--- a/tp-songs/01_folk/Brontosauři____Na_kameni_kámen.tex
+++ b/tp-songs/01_folk/Brontosauři____Na_kameni_kámen.tex
@@ -3,19 +3,15 @@
 \zp{Na kameni kámen}{Brontosauři}
 
 \zs
-Jako <C>starej suchej strom, jako <Fmaj7>všeničící hrom,
-jak v poli <C>tráva
+Jako <C>starej suchej strom, jako <Fmaj7>všeničící hrom, jak v poli <C>tráva
 
-připadá mi ten náš svět, plnej <Fmaj7>řečí a čím <Ami>víc, tím 
-<G>líp se <C>mám.
+připadá mi ten náš svět, plnej <Fmaj7>řečí a čím <Ami>víc, tím <G>líp se <C>mám.
 \ks
 
 \zr
-Budem <Fmaj7>o něco se rvát, až tu <Ami>nezůstane <G>stát na 
-kameni <C>kámen.
+Budem <Fmaj7>o něco se rvát, až tu <Ami>nezůstane <G>stát na kameni <C>kámen.
 
-A jestli <Fmaj7>není žádnej Bůh, tak nás <Ami>vezme země, 
-<G>vzduch, no a potom <C>amen.
+A jestli <Fmaj7>není žádnej Bůh, tak nás <Ami>vezme země, <G>vzduch, no a potom <C>ámen.
 \kr
 
 
