--- a/tp-songs/01_folk/Jaroslav_Ježek____Babička_Mary.tex
+++ b/tp-songs/01_folk/Jaroslav_Ježek____Babička_Mary.tex
@@ -33,7 +33,7 @@ dva kolťá<G7>ky za pasem, nad hlavou <C>točí lasem. <G7>
 
 Stoletá Mary, babička <D7>Mary, 
 
-ta zkrotí <G7>křepce hřebce, ať chce, či ne<C>chce.<E7> 
+ta zkrotí <G7>křepce hřebce, ať chce, či ne<C>chce. <E7> 
 \kr
 
 \zs
@@ -45,7 +45,7 @@ Mary má vždy slivovici v putně, Toma Mixe strčí do kapsy.
 
 Klika cvakla, v krčmě dveře letí a babička vchází do dveří.
 
-\uv{Pintu ginu, lumpové prokletí!}, bezzubou dásní zaláteří. 
+\uv{Pintu ginu, lumpové prokletí!} bezzubou dásní zaláteří. 
 
 \bigskip
 
