--- a/tp-songs/01_folk/Nezmaři____Ráno_bylo_stejný.tex
+++ b/tp-songs/01_folk/Nezmaři____Ráno_bylo_stejný.tex
@@ -9,7 +9,7 @@ v <Ami>druhý ruce holku, to <D>zavazadlo <G>svý,
 
 <Emi>a tý holce v sáčku řek': \uv{<D>Dobrýtro, miláčku,
 
-<C>podívej se <G>do dáli, <E7>uvidíš dvě smutný kole<Ami>je <D7>na silni<G>ci.}
+<C>podívej se <G>do dáli, <E7>uvidíš dvě smutný kole<Ami>je <D7> na silni<G>ci.}
 \ks
 
 \zs
@@ -23,13 +23,13 @@ dívali se do dáli, viděli dvě smutný koleje na silnici.
 \ks
 
 \zr
-<D>Ráno bylo stejný, <C>nesváteč<G>ní, <C> <G>
+<D>Ráno bylo stejný, <C>nesváteč<G>ní, <C> <G> <G> <C> <G>
 
-<D>na tvářích počasí <C>proměnli<G>vý, <C> <G>
+<D>na tvářích počasí <C>proměnli<G>vý, <C> <G> <G> <C> <G>
 
 <D>rádio hlásilo: \uv{<C>Na blatech <G>svítá,}
 
-<E7>každej byl tak trochu <Ami7>sám, <D7>hm.<G>
+<E7>každej byl tak trochu <Ami7>sám, <D7>hm. <G>
 \kr
 
 \zs
