--- a/tp-songs/01_folk/Samson_a_jeho_parta____Hrneček.tex
+++ b/tp-songs/01_folk/Samson_a_jeho_parta____Hrneček.tex
@@ -4,9 +4,9 @@
 
 \zs
 Přečti mi <G>pohádku z hrnečku <H#maj7>od kafe
-a ať je <G>v ní něco <H#maj7>hezkýho.
+a ať je v <G>ní něco <H#maj7>hezkýho.
 
-A ať jsem <G>v pořádku, ať mě svět <H#maj7>nerafe
+A ať jsem v <G>pořádku, ať mě svět <H#maj7>nerafe
 a ať <G>mám hodnýho <H#maj7>mužskýho.
 
 Ať se mi <Ami>zadaří a ať mě <D7>nemlátí,
