--- a/tp-songs/01_folk/Samson_a_jeho_parta____Katce.tex
+++ b/tp-songs/01_folk/Samson_a_jeho_parta____Katce.tex
@@ -42,7 +42,7 @@ Rotným být bych chtěl nebo generálem,
 
 to bych nevelel, spokojil se s málem, 
 
-Katka dosvědčí, že když se velí \uv{pozor!}, 
+Katka dosvědčí, že když se velí: \uv{Pozor!}, 
 
 lásce nesvědčí velmi přísný dozor. 
 \ks
