--- a/tp-songs/01_folk/Spirituál_kvintet____Žízeň.tex
+++ b/tp-songs/01_folk/Spirituál_kvintet____Žízeň.tex
@@ -9,7 +9,7 @@ já toužím celou duší dát <Fmaj7>živou vodu <C>všem,
 
 už v Knize knih je psáno: bez <Fmaj7>vody <Ami>nel<G>ze <C>žít,
 
-však ne každému je dáno <Fmaj7>z řeky pravdy <C>pít.
+však ne každému je dáno z <Fmaj7>řeky pravdy <C>pít.
 \ks
 
 \zr
