--- a/tp-songs/01_folk/Tichá_dohoda____Marioneta.tex
+++ b/tp-songs/01_folk/Tichá_dohoda____Marioneta.tex
@@ -14,7 +14,7 @@
 
 <Hmi>Marioneta <G> <A>zasně<D>ná, <A> 
 
-<D>loutka <G>s tváří <A>dřevě<Hmi>nou.
+<D>loutka s <G>tváří <A>dřevě<Hmi>nou.
 \kr
 
 
