--- a/tp-songs/01_folk/Wabi_Daněk____Rosa_na_kolejích.tex
+++ b/tp-songs/01_folk/Wabi_Daněk____Rosa_na_kolejích.tex
@@ -9,7 +9,7 @@
 
 na vylomený <C>zub,
 
-tak se vracím <F6>k svýmu ná<F#6>dra<G6>ží,
+tak se vracím k <F6>svýmu ná<F#6>dra<G6>ží,
 
 abych šel zas <C>dál.
 
@@ -17,7 +17,7 @@ Přede mnou <F6>stíny se <G6>plouží
 
 a <Ami>nad krajinou <F#dim>krouží
 
-podivnej <F6>pták,<F#6> <G6>pták nebo <C>mrak.
+podivnej <F6>pták, <F#6> <G6>pták nebo <C>mrak.
 \ks
 
 \zr
