--- a/tp-songs/01_folk/Zuzana_Navarová____Andělská.tex
+++ b/tp-songs/01_folk/Zuzana_Navarová____Andělská.tex
@@ -6,7 +6,7 @@
 <A>Bože, <Hmi7>podej mi ještě ten <Amaj7>kalich, <Hmi7> 
 to <A>víno, co s <Hmi7/F#>nocí se měnívá <C#mi7>na líh. <C#7> 
 Snad <F#mi>nad ránem na dně se <F#mi>dočtu,
-že <F#mi7>v kastlíku andělskou <D#mi7>počtu mám. <Dmaj7> 
+že v <F#mi7>kastlíku andělskou <D#mi7>počtu mám. <Dmaj7> 
 <Hmi/F#>Tu ru tu <E>tuu
 \ks
 
