--- a/tp-songs/01_folk/neznámý____Okoř.tex
+++ b/tp-songs/01_folk/neznámý____Okoř.tex
@@ -5,7 +5,7 @@
 \zs
 <D>Na Okoř je cesta jako žádná ze sta, <A7>vroubená je stroma<D>ma.
 
-<D>Když du po ní v létě samoten ve světě, <A7>sotva pletu noha<D>ma.
+<D>Když jdu po ní v létě samoten ve světě, <A7>sotva pletu noha<D>ma.
 
 <G>Na konci té cesty <D>trnité <E>stojí krčma jako <A7>hrad,
 
