--- a/tp-songs/01_folk/neznámý____Tři_citrónky.tex
+++ b/tp-songs/01_folk/neznámý____Tři_citrónky.tex
@@ -15,7 +15,7 @@ zůstaly na hladi<C>ně.
 
 <C>rybaroba <Ami>rybaroba <Dmi>rybaroba <G7>čuču,
 
-zůstaly na hladi<C>ně
+zůstaly na hladi<C>ně.
 \kr
 
 \zs
