--- a/tp-songs/02_pop_rock/Blue_Effect____Sluneční_hrob.tex
+++ b/tp-songs/02_pop_rock/Blue_Effect____Sluneční_hrob.tex
@@ -9,7 +9,7 @@ o ně<G#mi>jakej ten rok zpát<F#mi>ky,
 
 <E>bejt zase malým <F#mi>klukem,
 
-kterej si <G#mi>rád hraje a kterej je <F#mi>s tebou. <E>
+kterej si <G#mi>rád hraje a kterej je s <F#mi>tebou. <E>
 \ks
 
 \zs
@@ -17,7 +17,7 @@ kterej si <G#mi>rád hraje a kterej je <F#mi>s tebou. <E>
 
 <E>já byl <F#mi>kluk, <G#mi>kterej <F#mi>chtěl
 
-<E>zná<F#mi>ti svět, <G#mi>s tebou <F#mi>jsem si hr<E>ál.
+<E>zná<F#mi>ti svět, s <G#mi>tebou <F#mi>jsem si <E>hrál.
 \ks
 
 \zs
