--- a/tp-songs/02_pop_rock/Karel_Zich____Alenka_v_říši_divů.tex
+++ b/tp-songs/02_pop_rock/Karel_Zich____Alenka_v_říši_divů.tex
@@ -16,13 +16,13 @@
 
 sám jedenkrát bych s plnou brašnou cinknul u dveří,
 
-bude <D>v očích mít úžas jak Alen<G>ka <D>v říši divů.
+bude <D>v očích mít úžas jak Alen<G>ka v <D>říši divů.
 
 I <G>když dá mi košem, až řádky bude <C>číst,
 
 já chtěl bych být tím listonošem, neboť jsem si jist, bude
 
-<D>v očích mít úžas <C>jak Alen<D>ka v <G>říši divů. 
+v <D>očích mít úžas <C>jak Alen<D>ka v <G>říši divů. 
 
 \kr
 \zs
