--- a/tp-songs/02_pop_rock/Lucie____Medvídek.tex
+++ b/tp-songs/02_pop_rock/Lucie____Medvídek.tex
@@ -14,7 +14,7 @@ křížový -- Bůh ho ochrání
 
 před smečkou <Emi>římskejch psů
 a jejich <A7>úřadů --
-ti <G>posílá lásku, co <A>v bříšku má.
+ti <G>posílá lásku, co v <A>bříšku má.
 \ks
 
 
