--- a/tp-songs/02_pop_rock/Nightwork____Globální_oteplování.tex
+++ b/tp-songs/02_pop_rock/Nightwork____Globální_oteplování.tex
@@ -9,11 +9,11 @@ kluci, já měl <F#mi>sen.
 <E>Sníval jsem ho <F#mi>každý, <G#mi>každý všední 
 <F#mi>den.
 
-<C#mi>Jednoho dne <G#mi>v neděli,
+<C#mi>Jednoho dne v <G#mi>neděli,
 
 když naši <F#mi>za babičkou odjeli,
 
-<A>Pátral jsem <C#mi>v mámině <G#mi>šatníku,
+<A>Pátral jsem v <C#mi>mámině <G#mi>šatníku,
 
 <F#mi>střevíce padly k mému <A>kotníku.
 
