--- a/tp-songs/02_pop_rock/Olympic____Želva.tex
+++ b/tp-songs/02_pop_rock/Olympic____Želva.tex
@@ -25,7 +25,7 @@ Víš, má drahá, a zbytek je pod vanou.
 \zr
 <G>Když si <D>někdo <C>pozor ne<G>dá, jak se <D>vlastně <C>želva hle<G>dá,
 
-<C>ona ho na něco nachy<D>tá, <C>i když si to pozděj’c 
+<C>ona ho na něco nachy<D>tá, <C>i když si to pozdějc 
 vyčí<D>tá.
 \kr
 
