--- a/tp-songs/02_pop_rock/Sto_zvířat____Škola.tex
+++ b/tp-songs/02_pop_rock/Sto_zvířat____Škola.tex
@@ -11,7 +11,7 @@ mám <A>průsery a <Dmi>koule
 a s <A>naší účou <Dmi>problém,
 je to <A>golem a má <Dmi>knír. <A> <Dmi> <A>
 
-Z <Dmi>týhle úči <A>v palici mi <Dmi>hučí,
+Z <Dmi>týhle úči v <A>palici mi <Dmi>hučí,
 prej <A>hejbnul jsem jí <Dmi>žlučí 
 
 a <A>proto, za to <Dmi>ručím,
@@ -24,7 +24,7 @@ Mě snad <Gmi>šlehne, <Dmi>ta se odsud <Gmi>nehne,
 ať <Dmi>zem se po ní <Gmi>slehne! 
 
 Už <Dmi>kuchařky nám <Gmi>stehnem
-hrachovou <Dmi>kaši <Gmi>zahřívaj.<Dmi> <Gmi> <Dmi>
+hrachovou <Dmi>kaši <Gmi>zahřívaj. <Dmi> <Gmi> <Dmi>
 
 <Dmi>Děsná nuda, <A>zákazy a <Dmi>pruda
 a <A>za katedrou <Dmi>zrůda
