--- a/tp-songs/03_zahranicni/Beatles____A_hard_days_night.tex
+++ b/tp-songs/03_zahranicni/Beatles____A_hard_days_night.tex
@@ -8,9 +8,9 @@
 
 It's been a <G>hard <C>day's <G>night, and I've been <F>working like a <G>dog
 
-It's been a hard <C>day's n<G>ight, I should be s<F>leeping like a<G> log
+It's been a hard <C>day's <G>night, I should be <F>sleeping like a <G>log
 
-But when I <C>get home to you, I find the t<D7>hings that you do
+But when I <C>get home to you, I find the <D7>things that you do
 
 Will make me <G>feel <C>al<G>right
 \ks
@@ -38,8 +38,8 @@ But when I get home to you, I find the things that you do
 
 Will make me feel alright
 
-You know I fee<C>l al<G>right
+You know I feel <C>al<G>right
 
-You kno<G>w I f<C>eel <F>alright <G> 
+You know I <C>feel <F>alright <G> 
 \ks
 \kp
