--- a/tp-songs/03_zahranicni/Beatles____All_my_loving.tex
+++ b/tp-songs/03_zahranicni/Beatles____All_my_loving.tex
@@ -7,9 +7,9 @@ Close your <F#mi>eyes and I'll <H7>kiss you
 
 To<E>morrow I'll <C#mi>miss you
 
-Re<A>member I'll <F#mi>always be <D>true<H7>
+Re<A>member I'll <F#mi>always be <D>true <H7>
 
-And then <F#mi>while I'm <H7>away
+And then <F#mi>while I'm a<H7>way
 
 I'll write <E>home every <C#mi>day
 
