--- a/tp-songs/03_zahranicni/Eric_Clapton____Layla.tex
+++ b/tp-songs/03_zahranicni/Eric_Clapton____Layla.tex
@@ -15,7 +15,7 @@
 \ks
 
 \zr
-La<Dmi>yla, <B>you got <C>me on my <Dmi>knees
+Lay<Dmi>la, <B>you got <C>me on my <Dmi>knees
 
 Lay<B>la, I'm <C>begging darling <Dmi>please
 
