--- a/tp-songs/03_zahranicni/Fools_Garden____Lemon_Tree.tex
+++ b/tp-songs/03_zahranicni/Fools_Garden____Lemon_Tree.tex
@@ -11,7 +11,7 @@ I'm <Dmi>wasting my time I got <Ami>nothing to do
 
 I'm <Gmi>hanging around and I'm <A7>waiting for you
 
-But <Gmi>nothing ever happens -- <A7> and I <Dmi>wonder <Ami> <Dmi>
+But <Gmi>nothing ever happens <A7>-- and I <Dmi>wonder <Ami> <Dmi>
 \ks
 
 \zs
