--- a/tp-songs/03_zahranicni/Lynyrd_Skynyrd____Sweet_home_Alabama.tex
+++ b/tp-songs/03_zahranicni/Lynyrd_Skynyrd____Sweet_home_Alabama.tex
@@ -3,7 +3,7 @@
 \zp{Sweet home Alabama}{Lynyrd Skynyrd}
 
 \zs
-<D>Big whee<Cmaj7>ls keep on tu<G>rning.
+<D>Big <Cmaj7>wheels keep on <G>turning.
 Carry me home to see my kin!
 
 Singing songs about the Southland,
