--- a/tp-songs/03_zahranicni/Meredith_Brooks____Bitch.tex
+++ b/tp-songs/03_zahranicni/Meredith_Brooks____Bitch.tex
@@ -3,9 +3,9 @@
 /: <A>~~~~~~~~~ <E> <D> :/
 
 \zs
-I <A>hate the world today. <E><D>
-You're so good to me I
-<A>know but I can't change <E><D>
+I <A>hate the world today. <E> <D>
+
+You're so good to me I <A>know but I can't change <E> <D>
 
 Tried to tell you but you <F#mi>look at me like maybe
 
