--- a/tp-songs/03_zahranicni/Nick_Cave____Where_the_Wild_Roses_Grow.tex
+++ b/tp-songs/03_zahranicni/Nick_Cave____Where_the_Wild_Roses_Grow.tex
@@ -1,9 +1,13 @@
 \zp{Where the wild roses grow}{Leonard Cohen and Nick Cave}
 
 \zr
-They <Emi>called me The Wild <Ami>Rose <Emi>but my <G>name was Elisa <H>Day
+They <Emi>called me The Wild <Ami>Rose
 
-Why they <Emi>called me it I do not <Ami>know <Emi>for my name was <D>Elisa <Emi>Day
+<Emi>But my <G>name was Elisa <H>Day
+
+Why they <Emi>called me it I do not <Ami>know
+
+<Emi>For my name was <D>Elisa <Emi>Day
 \kr
 
 He:
