--- a/tp-songs/01_folk/Karel_Plíhal____Myš.tex
+++ b/tp-songs/01_folk/Karel_Plíhal____Myš.tex
@@ -8,7 +8,7 @@ dole <Gmi7>jí
 
 a čte si <Hmi7>starej Mladej <Gmi7>svět, <C7>
 
-a <Fmaj7>právě <Hmi7>o pár pater <Cmi7>výš <D9>sedí velká <Gmi7>myš--
+a <Fmaj7>právě <Hmi7>o pár pater <Cmi7>výš <D9>sedí velká <Gmi7>myš
 
 u dveří <C7>dvě stě dvacet <Fmaj7>pět.
 \kr
