--- a/tp-songs/02_pop_rock/Elán____Smrtka_na_pražskom_orloji.tex
+++ b/tp-songs/02_pop_rock/Elán____Smrtka_na_pražskom_orloji.tex
@@ -8,7 +8,7 @@ orloj a <Dmi>apošto<Ami>li,
 
 na konci <Dmi>smrťka sto<Ami>jí
 
-<Amimaj7>a každy sa jej bojí. <Ami>
+<Amaj7>a každy sa jej bojí. <Ami>
 \ks
 
 \zs
