--- a/tp-songs/03_zahranicni/Michel_Teló____Ai_se_eu_te_pego.tex
+++ b/tp-songs/03_zahranicni/Michel_Teló____Ai_se_eu_te_pego.tex
@@ -20,7 +20,7 @@ ai ai se eu te pego
 <C> <G> <Ami> <F> ~ <C> <G> <F>
 
 \zs
-<C>Sábado <G>na b<Ami>alad<F>a
+<C>Sábado <G>na <Ami>bala<F>da
 
 A galera começou a dançar
 
