Možnost přeložit písně do samostatných souborů (fixes #28)
Udělal jsem možnost přeložit písně do samostatných souborů. Do Snakemake stačí za "cb_pdf()" přidat ještě "singles". (Nebo nechat jen singles, pokud celý zpěvník nechceme.) To přeloží každou píseň ze songs jako soubor "autor____název.tex" v hlavním adresáři. Jestliže je nastavena proměnná singles_dir, soubory se budou generovat v tomto podadresáři. V single režimu jsou napevno zapnuté volby ONESIDE a NOHEADER, navíc se nesází číslo písně a negenerují žádné rejstříky.

Pokud chcete přeložit jen některé písně zvlášť, přijde mi v logice věci udělat pro ně samostatný Snakefile. V podstatě stačí jen úplná kostra bez obálek, hlaviček a možností. Ale když tam zůstanou, ničemu nepřekáží.

--- a/tpcb/songbook.sty
+++ b/tpcb/songbook.sty
@@ -405,7 +405,11 @@
   %  \else\keyIndex{{\protect\sbChord#3\protect\relax} -- #2}{\theSBSongCnt}\fi%
   \vspace{\SpaceAboveSTitle}%
   \if#1Y\begin{center}\fi
-    {\STitleNumberFont\theSBSongCnt}{\STitleFont\ --- #2}%
+    \ifdefined\SINGLE
+      {\STitleFont #2}%
+    \else
+      {\STitleNumberFont\theSBSongCnt}{\STitleFont\ --- #2}%
+    \fi
     \ifWordsOnly\relax\else{\STitleKeyFont}\fi%
   \if#1Y\end{center}\fi
   \STitleMarkboth{#2}{\relax}%
