Přidány akordy k rock'n'rollům (blezová dvanáctka)

--- a/tp-songs/03_zahranicni/Elvis_Presley____Blue_Suede_Shoes.tex
+++ b/tp-songs/03_zahranicni/Elvis_Presley____Blue_Suede_Shoes.tex
@@ -1,5 +1,6 @@
 \zp{Blue suede shoes}{Elvis Presley}
 
+\ifdefined\TPBAND
 \zs
 Well it's one for the money, two for the show
 
@@ -9,6 +10,17 @@ But don't you step on my blue suede shoes
 
 Well you can do anything but lay off of my blue suede shoes
 \ks
+\else
+\zs
+Well it's <A>one for the money, two for the show
+
+Three to get ready now go <A7>cat go
+
+But <D>don't you step on my blue suede <A>shoes
+
+Well you can <E>do anything but lay <D>off of my blue suede <A>shoes
+\ks
+\fi
 
 \zs
 You can knock me down, step on my face
