--- a/tp-songs/03_zahranicni/Elvis_Presley____Hound_Dog.tex
+++ b/tp-songs/03_zahranicni/Elvis_Presley____Hound_Dog.tex
@@ -1,6 +1,6 @@
 \zp{Hound dog}{Elvis Presley}
 
-
+\ifdefined\TPBAND
 \zs
 You ain't nothin' but a hound dog
 
@@ -14,6 +14,22 @@ Well, you ain't never caught a rabbit
 
 And you ain't no friend of mine
 \ks
+\else
+\zs
+You ain't nothin' but a <C>hound dog
+
+Cryin' all the time
+
+<C7>You ain't nothin' but a <F9>hound dog
+
+Cryin' all the <C>time
+
+Well, you ain't <G7>never caught a rabbit
+
+And you <F7>ain't no friend of <C>mine<C7>
+\ks
+\fi
+
 
 \zs
 Well they said you was high-classed
