--- a/tp-songs/04_tp/Johnny____Dej_mi_nějaký_tóny.tex
+++ b/tp-songs/04_tp/Johnny____Dej_mi_nějaký_tóny.tex
@@ -2,6 +2,7 @@
 
 \zp{Dej mi nějaký tóny}{Jan \uv{Johnny} Dočkal}
 
+\ifdefined\TPBAND
 \zs
 Dej mi ňákej rytmus, dej mi ňákej beat,
 
@@ -13,6 +14,20 @@ a správný akordy nech znít,
 
 ať máme na co tančit, na co zpívat, nač se dívat, k čemu pít.
 \ks
+
+\else
+\zs
+<G>Dej mi ňákej rytmus, dej mi ňákej beat,
+
+mý tělo sžíraj roupy a mý nohy neznaj klid.
+
+<C>Tak hrábni do strun
+
+a správný akordy nech <G>znít,
+
+<D>ať máme na co tančit, na co <C>zpívat, nač se dívat, k čemu <G>pít. <D>
+\ks
+\fi
 
 \zs
 Dej mi ňáký tóny, dej mi ňákej riff,
