Revize Snakemake závislostí
* označení souborů nepotřebných pro opětovný překlad jako temp
* totéž pro soubory, jejichž generace nic nestojí a zabírají zbytečně místo (jen kopie z tpcb)
* _single.pdf nechat v cache_dir() (fixes #28)
* odstranění závislostí, které se nepoužívají
* zjednodušení logiky kolem .idx, .ind a .idx.old
* obecný cleanup

--- a/tpcb/template.tex
+++ b/tpcb/template.tex
@@ -31,8 +31,8 @@
   \pagestyle{empty}
 \else
   \pagestyle{fancy}
-  \fancyhead[RE]{\RHEAD}
-  \fancyhead[LO]{\LHEAD}
+  \fancyhead[RE]{\ifdefined\RHEAD\RHEAD\fi}
+  \fancyhead[LO]{\ifdefined\LHEAD\LHEAD\fi}
   \fancyhead[RO]{}
   \fancyhead[LE]{}
   \fancyfoot{}
