Drobné opravy akordů

--- a/tp-songs/01_folk/Fešáci____Lojza_a_Líza.tex
+++ b/tp-songs/01_folk/Fešáci____Lojza_a_Líza.tex
@@ -16,7 +16,7 @@
 \zs
 Vědro <G>má ve dně <C>díru, milá Lízo, milá Lízo,
 
-vědro <G>má ve dně <C>díru, milá <D>Lízo, jak <G>hrom.
+vědro <G>má ve dně <C>díru, milá Lízo, <D>jak <G>hrom.
 \ks
 
 \zs
