--- a/tp-songs/01_folk/Ivan_Mládek____Jez.tex
+++ b/tp-songs/01_folk/Ivan_Mládek____Jez.tex
@@ -4,7 +4,7 @@
 \zs
 <A>Na vodu už <E7>jezdím jenom s <A>Vendou, s <E7>Vendou,
 
-<A>do kanoe <E7>nevlezu už s <A>Jendou <E7>Bendou,
+<A>do kanoe <E7>nevlezu už s <A>Jendou <Adim>Bendou,
 
 <Hmi>Jenda <E7>Benda <A>nemožný je <F#7>zadák,
 
