--- a/tp-songs/03_zahranicni/Leonard_Cohen____Hallelujah.tex
+++ b/tp-songs/03_zahranicni/Leonard_Cohen____Hallelujah.tex
@@ -15,7 +15,7 @@ It <C>goes like this, the <F>fourth, the <G>fifth
 
 The <Ami>minor fall, the <F>major lift
 
-The <G>baffled king com<E>posing Halle<Dmi>lujah
+The <G>baffled king com<E>posing Halle<Ami>lujah
 \ks
 
 \zr
