added new songs and some changes

--- a/tp-songs/01_folk/Ivo_Cicvárek____Banánové_blues.tex
+++ b/tp-songs/01_folk/Ivo_Cicvárek____Banánové_blues.tex
@@ -2,21 +2,20 @@
 
 \zp{Blues o loupání banánů od špičky}{Ivo Cicvárek}
 
-    Amaj7 
 \zs
-   <Amaj7>Dělit lidi podle barvy pleti 
+   <A6>Dělit lidi podle barvy pleti 
    
    <D7>připadalo my vždy hloupé,
    
-   <Amaj7>lepší je je hodnotiti podle toho,
+   <A6>lepší je je hodnotiti podle toho,
 
    <D7>jak si kdo svůj banán loupe.
 
-   <F#mi7>Někdo vezme <Hmi7>za stopku a trhne,
+   <F#mi7>Někdo vezme <H7>za stopku a <E7>trhne,
 
-   <F#mi7>tohle to mi <Hmi7>připadá <E7>zvrhlé,
+   <F#mi7>tohle to mi <H7>připadá <E7>zvrhlé,
 
-   a tak <F#mi7>zpívám <G#mi7>svý <Hmi7>špičkařský <E7>banánový <Amaj7>blues. <D7> <E7>
+   a tak <A6>zpívám <H6>svý <D7>špičkařský <E7>banánový <A6>blues. <F7> <E7>
 \ks
 
 \zs
@@ -40,9 +39,9 @@
 
    od <Hmi7>stopky loupou opice, však my jsme <F#mi7>výš, jsme na vrcholu přírody,
 
-   od <Hmi7>špičky loupat, za stopku pohodlně držet, v klidu jíst,
+   od <Hmi7>špičky loupat, za stopku pohodlně <F#mi7>držet, v klidu jíst,
 
-   od <Hmi7>stopky loupat, to je <F#mi7>jako <G#mi7>knížku <Hmi7>od kon<C#mi7>ce číst.<Amaj7> <D7> <E7>
+   od <Hmi7>stopky loupat, to je <A6>jako <H6>knížku <D7>od kon<E7>ce číst.<A6> <F7> <E7>
 \kr
 
 \zs
