--- a/tp-songs/04_tp/Johnny____Dej_mi_nějaký_tóny.tex
+++ b/tp-songs/04_tp/Johnny____Dej_mi_nějaký_tóny.tex
@@ -41,4 +41,16 @@ svižnou písničku nech znít,
 ať máme proč se nadchnout, proč se hýbat, proč si zpívat, pro co žít.
 \ks
 
+\zs
+Dej mi ňákou linku, dej mi ňákej bas
+
+Ať mám ňákej základ k čemu zpívat první hlas
+
+Tak hrábni do strun
+
+Svižnou písničku nech znít
+
+Ať máme proč se hýbat, proč si zpívat, proč se líbat, pro co žít
+\ks
+
 \kp
