verze před koncertem ve fatálu

--- a/tp-songs/02_pop_rock/Yvonne_Přenosilová____Sklípek.tex
+++ b/tp-songs/02_pop_rock/Yvonne_Přenosilová____Sklípek.tex
@@ -58,4 +58,10 @@ rozehřát.
 = 5.
 \ks
 
+\zs
+Půjdem spolu do Betléma, dujdaj, dujdaj, dujdaj dá! 
+
+Ježíšku, panáčku! Já tě budu kolíbati. 
+\ks 
+
 \kp
