--- a/tp-songs/03_zahranicni/Beatles____Oh_darling.tex
+++ b/tp-songs/03_zahranicni/Beatles____Oh_darling.tex
@@ -3,13 +3,13 @@
 \zp{Oh darling}{Beatles}
 
 \zs
-<F>Oh <A>darling, please, be<E>lieve me 
+<A7>Oh <D>darling please be<A>lieve me 
 
-<F#mi>I'll never do you no <D>harm 
+<Hmi>I'll never do you no <G>harm 
 
-Be<Hmi7>lieve me when I <E7>tell you 
+be<Emi7>lieve me when I <A7>tell you 
 
-<Hmi7>I'll never <E7>do you no <A>harm <D> <A> <E7>
+<Emi7>I'll never <A7>do you no <D>harm.<G> <D> <A> 
 \ks
 
 \zs
@@ -17,19 +17,19 @@ Oh darling if you leave me
 
 I'll never make it alone 
 
-Believe me when I beg you 
+believe me when I beg you 
 
-Don't ever leave me alone <D7> 
+don't ever leave me alone. <D7> 
 \ks
 
 \zr
-(Be<A>live me <A7>darling) When you <D>told me you didn't <F>need me anymore 
+When you <G>told me you didn't <B7>need me anymore 
 
-Well you <A>know I nearly broke down and cried 
+well you <D>know I nearly broke down and cried 
 
-<A7>When you <H7>told me you didn't <E7>need me anymore 
+when you <E7>told me you didn't need me anymore 
 
-Well you know I nearly <F>broke down and <E7>died <E7+> 
+well you <A7>know I nearly <B7-/F>broke down and <A7>died<A+>. 
 \kr
 
 \zs
@@ -37,22 +37,22 @@ Oh darling if you leave me
 
 I'll never make it alone 
 
-Believe me when I tell you 
+believe me when I tell you 
 
-I'll never do you no harm
+I'll never do you no harm. 
 \ks
 
 \zr
-\kr 
+\kr
 
 \zs
 Oh darling please believe me 
 
 I'll never let you down 
 
-Believe me when I tell you 
+believe me when I tell you 
 
-I'll never do you no harm <D> <A> <B9> <A>
+I'll never do you no harm. <D> <G> <D> <Es7> <D7>
 \ks
 
 \kp
