--- a/tp-songs/03_zahranicni/Natalie_Imbruglia____Torn.tex
+++ b/tp-songs/03_zahranicni/Natalie_Imbruglia____Torn.tex
@@ -27,7 +27,7 @@ I'm <F>torn
 \ks
 
 \zr
-I'm all out of <C>faith, this is how I <Dmi>feel
+<F>I'm all out of <C>faith, this is how I <Dmi>feel
 
 I'm cold and I am <Bb>shamed, lying naked on the <F>floor
 
@@ -39,21 +39,21 @@ You're a little <C>late, I'm already <Dmi>torn <Bb>
 \kr
 
 \zs
-So I guess the fortune teller's right
+<F>So I guess the fortune teller's right
 
-I should have seen just what was there and not some holy light
+<Am>I should have seen just what was there and not some <B>holy light
 
 But you crawl beneath my veins and now
 
-I don't care, I have no luck
+<Dm>I don't care, I have no luck
 
-I don't miss it all that much 
+<C>I don't miss it all that much 
 
-There's just so many things
+<Am>There's just so many things
 
-That I can't touch
+<C>That I can't touch
 
-I'm torn
+I'm <F>torn
 \ks
 
 \zr
@@ -77,7 +77,7 @@ I'm <F>torn
 
 \zr
 \kr
-...Torn...
+<Dm>...Torn...<C>
 
 \zr
 (sólo)
