--- a/tp-songs/03_zahranicni/Steve_Miller_Band____Joker.tex
+++ b/tp-songs/03_zahranicni/Steve_Miller_Band____Joker.tex
@@ -11,6 +11,7 @@ Some people call me Maurice
 
 Cause I speak of the pompitous of love
 \ks
+
 \zs
 People talk about me, baby
 
@@ -25,12 +26,27 @@ Cause I'm right here, right here, right here, right here at home
 Cause I'm a picker, I'm a grinner, I'm a lover, and I'm a sinner
 
 I play my music in the sun
-\bigskip
 
 I'm a joker, I'm a smoker, I'm a midnight toker
 
 I sure don't want to hurt no one
+
+\bigskip
+
+I'm a picker, I'm a grinner, I'm a lover, and I'm a sinner
+
+I play my music in the sun
+
+I'm a joker, I'm a smoker, I'm a midnight toker
+
+I get my lovin' on the run
+
+Wooo Wooooo
 \kr
+
+\zs
+(solo)
+\ks
 
 \zs
 You're the cutest thing that I ever did see
@@ -43,6 +59,13 @@ Ooo-eee baby, I'll sure show you a good time
 \ks
 \zr
 ... I get my lovin' on the run
+
+...  I sure don't want to hurt no one
+
+(solo)
+
+Wooo Wooooo
+
 \kr
 
 \zr\kr
