--- a/tp-songs/04_tp/Josef____Famme_fatal.tex
+++ b/tp-songs/04_tp/Josef____Famme_fatal.tex
@@ -5,9 +5,9 @@
 \zs
 <E>She is punctual - came exactly hour <B>late
 
-<D>but it was a going out event, wouldn't call it a <A>date
+<D>but it was just going out, wouldn't call it a <A>date
 
-<E>Sparkling of my wine reflected in her <B>eyes
+<E>Sparkling wine reflected in her <B>eyes
 
 <D>her butiful laught as I told her all my <A>lies
 \ks
@@ -19,11 +19,11 @@ And she speaks french!
 \kr
 
 \zs
-Then she told me that they broke up and she‘s single now 
+told me that they broke up, she‘s single now 
 
 On the bridge, sunset was glowing like an explosion somehow
 
-after I turned red like a boy on a traffic light
+I turned red like a boy on traffic light
 
 did she notice? No? That must have been quite tight.
 \ks
@@ -32,9 +32,9 @@ did she notice? No? That must have been quite tight.
 \kr
 
 \zs
-The night went on, we went to a full vibrant bar
+The night went on, we went to a vibrant bar
 
-had a coctails cause without them we wouldn't make it so far
+had coctails cause without them we would not get far
 
 our friend was dancing with an italian guy
 
@@ -42,7 +42,7 @@ and I must say that he clearly wasn't shy
 \ks
 
 \zs
-I tried some of his moves on my lovely partner
+I tried some of his moves on my dance partner
 
 and she just smiled and started to shiver like a panter
 
