zmeny na Johnnyho pokoncertove prani

--- a/tp-songs/02_pop_rock/Yvonne_Přenosilová____Sklípek.tex
+++ b/tp-songs/02_pop_rock/Yvonne_Přenosilová____Sklípek.tex
@@ -61,7 +61,9 @@ rozehřát.
 \zs
 Půjdem spolu do Betléma, dujdaj, dujdaj, dujdaj dá! 
 
-Ježíšku, panáčku! Já tě budu kolíbati. 
+Ježíšku, panáčku! Já tě budu kolíbati, 
+
+Ježíšku, panáčku! Já tě budu kolíbat! 
 \ks 
 
 \kp
