--- a/tp-songs/03_zahranicni/Bill_Haley____Rock_Around_the_Clock.tex
+++ b/tp-songs/03_zahranicni/Bill_Haley____Rock_Around_the_Clock.tex
@@ -1,7 +1,32 @@
 % -*-coding: utf-8 -*-
 
-\zp{Rock around the clock}{Bill Haley and the Comets}
+\zp{Rock Around the Clock}{Bill Haley and the Comets}
 
+\ifdefined TPBAND
+<E> <A> <H7>
+\zs 
+One, two, three o'clock, four o'clock, rock
+
+Five, six, seven o'clock, eight o'clock, rock
+
+Nine, ten, eleven o'clock, twelve o'clock, rock
+
+We're gonna rock around the clock tonight
+\ks
+
+\zs
+
+Put your glad rags on and join me, hon
+
+We'll have some fun when the clock strikes one
+
+We're gonna rock around the clock tonight
+
+We're gonna rock, rock, rock, 'til broad daylight
+
+We're gonna rock, gonna rock, around the clock tonight
+\ks
+\else
 \zs 
 <E>One, two, three o'clock, four o'clock, rock
 
@@ -24,6 +49,7 @@ We're gonna <E>rock, rock, rock, 'til broad daylight
 
 We're gonna <H7>rock, gonna rock, a<A7>round the clock to<E>night
 \ks
+\fi
 
 \zs
 When the clock strikes two, three and four
@@ -64,4 +90,7 @@ Start a-rockin' round the clock again
 ...
 \ks
 
+\ifdefined TPBAND
+<E> <E7> <A> <Am> <H7> <E>
+\fi
 \kp
