--- a/tp-songs/03_zahranicni/Chuck_Berry____Johnny_B_Goode.tex
+++ b/tp-songs/03_zahranicni/Chuck_Berry____Johnny_B_Goode.tex
@@ -1,5 +1,30 @@
 \zp{Johnny B Goode}{Chuck Berry}
 
+\ifdefined TPBAND
+<G> <C> <D>
+
+\zs
+Deep down Louisiana close to New Orleans
+
+Way back up in the woods among the ever greens
+
+There stood a log cabin made of earth and wood
+
+Where lived a country boy named Johnny B Goode
+
+Who never ever learned to read or write so well
+
+But he could play the guitar just like a ringing a bell
+\ks
+
+\zr
+Go, go! Go, Johnny, go, go!
+
+Go, Johnny, go, go! Go, Johnny, go, go!
+
+Go, Johnny, go, go! Johnny B Goode
+\kr
+\else
 \zs
 <G>Deep down Louisiana close to New Orleans
 
@@ -21,6 +46,7 @@ Go, Johnny, go, <C>go! Go, Johnny, go, <G>go!
 
 Go, Johnny, go, <D>go! Johnny B <G>Goode
 \kr
+\fi
 
 \zs
 He used to carry his guitar in a gunny sack
@@ -55,4 +81,8 @@ Saying `Johnny B Goode' tonight.''
 \ks
 
 \zr\kr
+
+\ifdefined TPBAND
+<G> <G7> <C> <Cm> <D> <G>
+\fi
 \kp
