--- a/tp-songs/03_zahranicni/Elvis_Presley____Blue_Suede_Shoes.tex
+++ b/tp-songs/03_zahranicni/Elvis_Presley____Blue_Suede_Shoes.tex
@@ -1,6 +1,7 @@
-\zp{Blue suede shoes}{Elvis Presley}
+\zp{Blue Suede Shoes}{Elvis Presley}
 
 \ifdefined\TPBAND
+<A> <D> <E>
 \zs
 Well it's one for the money, two for the show
 
@@ -73,5 +74,9 @@ Blue, blue, blue suede shoes
 
 Well you can do anything but lay off of my blue suede shoes
 \ks
+
+\ifdefined\TPBAND
+<A> <A7> <D> <Dm> <E> <A>
+\fi
 
 \kp
