--- a/tp-songs/04_tp/Johnny____Dej_mi_nějaký_tóny.tex
+++ b/tp-songs/04_tp/Johnny____Dej_mi_nějaký_tóny.tex
@@ -3,6 +3,9 @@
 \zp{Dej mi nějaký tóny}{Jan \uv{Johnny} Dočkal}
 
 \ifdefined\TPBAND
+
+<G> <C> <D>
+ 
 \zs
 Dej mi ňákej rytmus, dej mi ňákej beat,
 
@@ -52,5 +55,9 @@ Svižnou písničku nech znít
 
 Ať máme proč se hýbat, proč si zpívat, proč se líbat, pro co žít
 \ks
+
+\ifdefined\TPBAND
+<G> <G7> <C> <Cm> <D> <G>
+\fi
 
 \kp
