pridan Bobek zmeny v Praise you a Jokerovi

--- a/tp-songs/03_zahranicni/Steve_Miller_Band____Joker.tex
+++ b/tp-songs/03_zahranicni/Steve_Miller_Band____Joker.tex
@@ -1,9 +1,9 @@
 \zp{The joker}{Steve Miller Band}
 
-/: <F> ~ <B> ~ <C> ~ <B> :/
+2x /: <F> ~ <B> ~ <C> ~ <B> :/
 
 \zs
-<F>Some <B>people call me the space <C>cowboy, yeah~<B> ~ <F>
+Some people call me the space cowboy, yeah
 
 Some call me the gangster of love
 
@@ -23,6 +23,8 @@ Cause I'm right here, right here, right here, right here at home
 \ks
 
 \zr
+2x /: <F> ~ <B> ~ <F> ~ <B> ~ <F> ~ <B> ~ <C> ~ <B> :/
+
 Cause I'm a picker, I'm a grinner, I'm a lover, and I'm a sinner
 
 I play my music in the sun
@@ -31,17 +33,9 @@ I'm a joker, I'm a smoker, I'm a midnight toker
 
 I sure don't want to hurt no one
 
-\bigskip
+... I get my lovin' on the run
 
-I'm a picker, I'm a grinner, I'm a lover, and I'm a sinner
-
-I play my music in the sun
-
-I'm a joker, I'm a smoker, I'm a midnight toker
-
-I get my lovin' on the run
-
-Wooo Wooooo
+<C>Wooo <C>Wooooo
 \kr
 
 \zs
@@ -57,6 +51,7 @@ Lovey-dovey, lovey-dovey, lovey-dovey all the time
 
 Ooo-eee baby, I'll sure show you a good time
 \ks
+
 \zr
 ... I get my lovin' on the run
 
